--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SECRET_KEY  = '%2i%tj9ra24q4tph3ie_hds+6h(#76@q=o3z2=jo!12&rtyk6@'
 
 DB_NAME = 'ubsSystem'
 DB_USER = 'ubsSystem'
-DB_PASSWORD = 'ufpi2021'
+DB_PASSWORD = 'ufpi2021@dti'
 DB_HOST= 'localhost'
 DB_PORT= '5432'
 
